src/test/deca/avecObjet/valid/call_method_return_int_used copy.deca
// Description :
//    Appel d'une méthode retournant un int.
//
// Resultats :
//    OK

class A {
    int get() {
        return 3;
    }
}

{
    A a = new A();
    println(a.get());
}

