src/test/deca/avecObjet/invalid/call_method_on_int.deca
// Description :
//    Appel de méthode sur une expression de type int.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    int x = 3;
    x.f();
}

